5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_1446.log
== TEST (2019-04-04 18:22:47) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=input("litros de suco comprado")
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud-=round(michael, 3)
print(mroud)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    michael=1/3*suco
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:23:37) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=flaot("litros de suco comprado"))
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud-=round(michael, 3)
print(mroud)
-- ERROR:
File "XXXX", line 2
    suco=flaot("litros de suco comprado"))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:23:54) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=float(lios de suco comprado"))
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud-=round(michael, 3)
print(mroud)
-- ERROR:
File "XXXX", line 2
    suco=float(lios de suco comprado"))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:24:59) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=float(input("suco comprado"))
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud-=round(michael, 3)
print(mroud)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mroud-=round(michael, 3)
NameError: name 'mroud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:25:07) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=float(input("suco comprado"))
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud=round(michael, 3)
print(mroud)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:25:10) 
-- CODE:
#primeiramente definimos a variavel da quantidade suco comprado
suco=float(input("suco comprado"))
#definimos a variavel da quantidade de suco que ficara com michael e arrendodamos o resuldado
michael=1/3*suco
mroud=round(michael, 3)
print(mroud)
-- EXECUTION TIME:
0.202121
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
